--- a/src/tuijian.css
+++ b/src/tuijian.css
@@ -6,3 +6,40 @@
   height: 30px;
   background-color: #ccc;
 }
+.tuijian-card{
+  position: relative;
+}
+.tuijian-card a{
+  display: inline-block;
+  width: 100vw;
+  height: 190px;
+  margin-bottom: 2px;
+}
+
+.tuijian-card .mnls{
+  background-image: url(./img/tuijianye_02.jpg);
+  background-size: cover;
+}
+.tuijian-card .zfz{
+  background-image: url(./img/tuijianye_04.jpg);
+  background-size: cover;
+}
+.tuijian-card .fg{
+  background-image: url(./img/tuijianye_06.jpg);
+  background-size: cover;
+}
+.share{
+  width: 100%;
+  height: 30px;
+  background-color: rgba(0, 0, 0, 0.3);
+  position: absolute;
+  display: flex;
+
+}
+.share .fa{
+  line-height: 30px;
+  color: #ccc;
+  flex-direction: column;
+
+
+}
