--- a/src/Fabu/fabu.css
+++ b/src/Fabu/fabu.css
@@ -1,6 +1,6 @@
 .fabu-warp{
   width: 100%;
-  height: 50px;
+  height: 10vh;
   border-bottom: 1px solid #000;
 }
 .fabu-inner{
@@ -11,32 +11,32 @@
   margin: 0;
   padding: 0;
   width: 80px;
-  height: 50px;
+  height: 10vh;
   margin: 0 auto;
-  line-height: 50px;
+  line-height: 10vh;
   color: red;
   font-size: 18px;
 }
 .img1{
   position: absolute;
-  left: 350px;
-  top: 6px;
+  right: 5vw;
+  top: 2vh;
   width: 40px;
   height: 40px;
 }
 .img2{
   position: absolute;
-  left: 10px;
-  top: 580px;
-  width: 40px;
-  height: 30px;
+  left: 2vh;
+  top: 79vh;
+  width: 4vh;
+  height: 3vh;
 }
 .fabu-dian{
   position: absolute;
   left: 0;
-  top: 396px;
+  top: 50vh;
   width: 100%;
-  height: 180px;
+  height: 27vh;
   background-color: #ccc;
 }
 .fabu-dian img{
@@ -48,9 +48,10 @@
 }
 .fabu-dian span{
   position: absolute;
-  left: 157px;
-  top: 102px;
+  left: 21vh;
+  top: 14vh;
   color: red;
+  font-size: 16px
 }
 .fabu-p{
   color: #ccc;
@@ -60,16 +61,17 @@
   width: 100%;
   position: absolute;
   left: 0;
-  top: 630px;
+  top: 83vh;
   padding: 5px;
   border-top: 1px solid #000;
 }
 .fabu-fu img{
-  width: 20px;
-  height: 30px;
+  width: 10px;
+  height: 15px;
   margin-right: 5px;
 }
 .fabu-fu span{
   color: #666;
   margin-right: 50px;
+  font-size: 16px;
 }
