--- a/src/lunbo.css
+++ b/src/lunbo.css
@@ -30,3 +30,96 @@
 .slide5{
   background-image: url(./img/welcome-bg.jpg);
 }
+.swiper-time{
+  font-size: 24px;
+  position:absolute;
+  bottom:30vh;
+  width:100%;
+  text-align: center;
+}
+.swiper-p{
+  position: absolute;
+  bottom:25vh;
+  width:100%;
+  text-align: center;
+}
+@keyframes lala {
+  %0{opacity: 0.4;margin-left:30px}
+  100%{opacity: 1;margin-left:5px}
+}
+.animate{
+  animation:lala 1s infinite ease-in
+}
+
+.sign{
+  width: 100vw;
+  height: 100vh;
+  background-image: url(./img/login-bg.jpg);
+  background-size: cover;
+  background-position: 50% 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction:column;
+}
+.my-inp{
+  display: block;
+  width: 60vw;
+  height: 10vw;
+  border: none;
+  border-bottom: 1px solid #000;
+  opcity:0.4;
+  margin-top: 10px;
+  text-align: center;
+  outline:none
+}
+.my-btn{
+  /*position: absolute;*/
+  bottom:35vh;
+  width: 15vw;
+  height: 10vw;
+  border: none;
+  opacity: 0.4;
+  justify-content:center;
+}
+.my-btn1{
+  left:30vw
+}
+.my-btn2{
+  right:30vw
+}
+.main-btn{
+  width: 40%;
+  display: flex;
+  justify-content:space-between;
+}
+.p-inp{
+  width: 70vw;
+  position: absolute;
+  left:15vw;
+  bottom:20vh;
+  font-size: 12px;
+  text-align: center;
+}
+.p-span{
+  color: brown
+}
+.footer-btn{
+  width: 20vw;
+  position: absolute;
+  bottom:5vh;
+  text-align: center;
+}
+.footer-btn1{
+  left:10vw
+}
+.footer-btn2{
+  left:40vw
+}
+.footer-btn3{
+  right:10vw
+}
+.footer-btn img{
+  width: 35px;
+  height: 35px;
+}
